<resources>
    <string name="app_name">Skill Market</string>

    <!-- Sign in form strings -->
    <string name="sign_in_login_text">Sign in</string>
    <string name="sign_in_sign_up_text">Sign up</string>
    <string name="sign_in_remember_me_text">Remember me.</string>

    <!-- Sign up form strings -->
    <string name="sign_up_nickname_text">Nickname</string>
    <string name="sign_up_full_name_text">Full name</string>
    <string name="sign_up_email_text">Email</string>
    <string name="sign_up_password_text">Password</string>
    <string name="sign_up_create_account_text">Create account</string>
    <string name="sign_up_have_account_text"><u>Already have an account? Sign in</u></string>
    <string name="sign_up_phone_number_text">Phone number</string>
    <string name="sign_up_city_text">City</string>
    <string name="sign_up_address_text">Address</string>

    <!-- Info messages -->
    <string name="info_message_signing_up">Signing you up!</string>
    <string name="info_message_wait">Wait a second…</string>
    <string name="info_message_signing_in">We are signing you in.</string>

    <!-- Success messages -->
    <string name="success_message">Success</string>
    <string name="success_message_signed_up">Your account was successfully registered. You can sign in now.</string>

    <!-- Errors and failures -->
    <string name="error_message_failure">Failure :(</string>
    <string name="error_message_unknown">Unknown error occurred</string>
    <string name="error_message_no_white_spaces">Don\'t use spaces</string>
    <string name="error_message_wrong_full_name">Add your last name</string>
    <string name="error_message_wrong_password">Min 8 characters</string>
    <string name="error_message_not_empty">This field is required</string>
    <string name="error_message_not_valid_email">Email is not valid</string>
    <string name="error_message_email_taken">Email is already taken</string>
    <string name="error_message_nickname_taken">Nickname is already taken</string>
    <string name="error_message_no_internet">Check your internet connection</string>
    <string name="error_message_invalid_credentials">Check your credentials and try again.</string>

    <!-- Others -->
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- User menu labels -->
    <string name="menu_item_manage_account">Manage account</string>
    <string name="menu_item_change_password">Change password</string>
    <string name="menu_item_change_email_address">Change email address</string>
    <string name="menu_item_change_address">Change address</string>
    <string name="menu_item_manage_offers">Manage your offers</string>
    <string name="menu_item_explore">Explore</string>
    <string name="menu_item_explore_offers">Explore offers</string>
    <string name="menu_item_explore_people">Explore people</string>
    <string name="menu_item_manage_people">Manage people</string>
    <string name="menu_item_your_friends">Your friends</string>
    <string name="menu_item_trusted_people">Trusted</string>

    <!-- User action tiles labels -->
    <string name="action_label_account">Your account</string>
    <string name="action_label_mails">Mails</string>
    <string name="action_label_people">People</string>
    <string name="action_label_offers">Announcements</string>
    <string name="action_label_settings">Settings</string>
    <string name="action_label_logout">Logout</string>

    <!-- User action tiles labels array -->
    <string-array name="action_tiles_labels_array">
        <item>Your account</item>
        <item>Messages</item>
        <item>People</item>
        <item>Announcements</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <!-- User account page titles -->
    <string-array name="page_titles">
        <item>About</item>
        <item>Friends and Trusted</item>
        <item>Announcements</item>
    </string-array>

    <!-- Mails -->
    <string name="mails_outbox_title">Outbox</string>
    <string name="mails_inbox_title">Inbox</string>
    <string name="mails_message_title_text">Message Title</string>
    <string name="mails_message_content_text">Message Content</string>

    <!-- Miscellaneous -->
    <string name="button_text_continue">Continue</string>

    <!-- Garbage -->
    <string name="sampleopinion">"Średni korepetytor, coprawda posiada ogromną wiedzę ale nie potrafi jej należycie przekazać. Zawsze punktualny, schludny, grzeczny i bardzo miły człowiek. Niestety średni jako nauczyciel.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin placerat vestibulum feugiat. Sed eget malesuada libero. Vestibulum quis fermentum libero. Vestibulum lectus orci, egestas a ligula in, faucibus viverra felis. Donec posuere sollicitudin neque, ac blandit diam iaculis ut. Ut finibus ante enim, ultricies pharetra felis sagittis a. Nulla porta quam id ligula porta, vitae fermentum augue pharetra. Vivamus scelerisque ligula et enim suscipit condimentum.</string>
    <string name="sampleoffer">Szukasz solidnej i uczciwej Firmy? Chciałbyś mieć porządnie odnowioną podłogę w rozsądnej cenie? Specjalizujemy się w cyklinowaniu i układaniu podłóg, posiadamy wieloletnie doświadczenie poparte setkami zadowolonych Klientów. Każde zlecenie wykonujemy starannie zapewniając jednocześnie wysoką estetykę prac. Cenimy sobie uczciwe i jasne zasady, dlatego wielu Klientów po jakimś czasie wraca do nas z kolejnymi prośbami. W naszej ofercie:\n- cyklinowanie bezpyłowe podłóg i schodów\n- lakierowanie(używamy tylko sprawdzonych i trwałych lakierów)\n- olejowanie, bejcowanie(barwienie)\n- montaż listw przypodłogowych\n- renowacja podłóg zabytkowych\n- szpachlowanie ubytków\n- pomiary wilgotności, osuszanie\n\nZajmujemy się także układaniem wszelkiego rodzaju podłóg. Wszystkie prace wykonujemy z wykorzystaniem nowoczesnych cykliniarek bezpyłowych. Zapewniamy pomoc i fachowe doradztwo podczas wyboru materiałów. Zawsze staramy się zachować równowagę pomiędzy wysoką jakością a przystępnymi cenami. Nasze prace wykonujemy w mieszkaniach, szkołach, halach sportowych, itp. Jesteśmy przyjaźnie nastawieni do nowych Klientów, dlatego zapraszamy do kontaktu i składania zapytań.\nGwarantujemy niskie ceny, zapraszamy. Tel. 733-534-222</string>


</resources>
