<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/user_toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_padding">

        <ImageView
            style="@style/logo_image"
            app:srcCompat="@mipmap/ic_app_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_nickname_text"
                android:inputType="textPersonName"
                android:textSize="@dimen/large_font" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_full_name_text"
                android:inputType="textPersonName"
                android:textSize="@dimen/large_font" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_email_text"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/large_font" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGreen">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_password_text"
                android:inputType="textPassword"
                android:textSize="@dimen/large_font" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_text_continue" />

        <TextView
            android:id="@+id/sign_up_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_have_account_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textIsSelectable="false" />

    </LinearLayout>

</LinearLayout>
