<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="it.szyszka.skillmarket.modules.user.activities.SignInActivity_">

    <include
        layout="@layout/mod_a_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/sign_in_app_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/module_a_toolbar"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/app_logo" />

    <LinearLayout
        android:id="@+id/sign_in_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_app_logo"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/regular_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/small_padding"
                android:hint="@string/sign_up_email_text"
                />

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/small_padding"
                android:hint="@string/sign_up_password_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_in_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#cddc39"
                android:text="@string/sign_in_login_text"/>

            <Button
                android:id="@+id/sign_in_sing_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#ffeb3b"
                android:text="@string/sign_in_sign_up_text"/>

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/sign_in_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_main_container"
        android:text="@string/sign_in_remember_me_text"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/sign_in_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_remember_me"
        android:textSize="@dimen/regular_font"
        android:textAlignment="center"/>

</RelativeLayout>
