<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/module_a_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/app_logo"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_full_name_text"
            android:textSize="12sp"
            android:layout_marginStart="3dp"/>

        <EditText
            android:id="@+id/sign_up_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_email_text"
            android:textSize="12sp"
            android:layout_marginStart="3dp"/>

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/sign_up_password_text"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/sign_up_toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/sign_up_password"
                app:srcCompat="@drawable/ic_eye"
                android:layout_alignBottom="@+id/sign_up_password" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_create_account_text"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/sign_up_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_have_account_text"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textIsSelectable="false"
        android:textColor="@color/colorAccent"/>

    </LinearLayout>
</LinearLayout>