<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/mod_a_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_padding">

        <ImageView
            app:srcCompat="@mipmap/app_logo"
            style="@style/logo_image"/>

        <include
            android:id="@+id/sign_up_alias"
            layout="@layout/utils_labeled_input_text" />

        <include
            android:id="@+id/sign_up_full_name"
            layout="@layout/utils_labeled_input_text" />

        <include
            android:id="@+id/sign_up_email"
            layout="@layout/utils_labeled_input_text" />

        <LinearLayout
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/labeled_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/sign_up_password_text"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/labeled_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/sign_up_toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/labeled_input_edit"
                android:layout_alignBottom="@+id/labeled_input_edit"
                app:srcCompat="@drawable/ic_eye" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_create_account_text"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/sign_up_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_have_account_text"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textIsSelectable="false"
        android:textColor="@color/colorAccent"/>

    </LinearLayout>
</LinearLayout>